Fix Resizing on mobile

--- a/src/app/components/form-credit-card/form-credit-card.component.scss
+++ b/src/app/components/form-credit-card/form-credit-card.component.scss
@@ -111,3 +111,9 @@ form {
     width: 90%;
   }
 }
+
+@media screen and (max-width: 420px) {
+  form {
+    width: 100%;
+  }
+}
